style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: poppins, sans-serif;
}

::-webkit-scrollbar {
    display: none;
}

a {
    text-decoration: none;

}

html {
    scroll-behavior: smooth;
}

html,
body {

    cursor: url('Assets/Images/green-small-cursor.png'), auto;
}


body {
    background-color: rgb(255, 255, 255);
    overflow-x: hidden;


}

section {
    width: 100vw;
    height: 100vh;

}

section:first-of-type {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#home-buttons-div {
    width: 50vw;
    height: 20vh;
    z-index: 999;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;

}

#home-buttons-div button {
    width: 16vw;
    font-size: 20px;
    padding: 10px 0;
    border-radius: 30px;     
    border: 3px solid white;
    color: white;
}

#donate-home-button{
    background-color: #003329;
    cursor: url('Assets/Images/white-big-cursor.png'), auto;
}

#membership-home-button{
    background-color: transparent;
    cursor: url('Assets/Images/green-big-cursor.png'), auto;
}

section:nth-of-type(2) {
    background-color: #003329;
    z-index: 999;
    position: relative;
    cursor: url('Assets/Images/white-small-cursor.png'), auto;

}

section:nth-of-type(3) {
    background-color: #003329;
    z-index: 99;
    position: relative;
    cursor: url('Assets/Images/white-small-cursor.png'), auto;

}

section:first-of-type img {
    position: absolute;
    width: 100vw;
    height: 100vh;
    object-fit: cover;

}

#plant {
    z-index: 100;
}



#main-heading {
    font-size: 80px;
    z-index: 1;
    color: white;

}

header {
    width: 100vw;
    height: 15vh;
    display: flex;
    position: fixed;
    background-color: transparent;
    z-index: 99999;


    transition: 0.5s;
    /*Temporary*/


}

#logo-div {
    display: flex;
    justify-content: center;
    align-items: center;

}

#logo-div img {
    width: 80px;
}

#horizontol-scroll-div-place-holder,
#logo-div {
    width: 8vw;
}

#nav-div {
    width: 92vw;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: transparent;


}

#nav-div ul {
    display: flex;
    gap: 20px;

}

#nav-div ul li {
    text-decoration: none;
    list-style-type: none;
    font-size: 20px;
    padding: 15px 20px;
    font-weight: 600;
}




.nav-list-item {
    font-size: 20px;
    padding: 15px 20px;
    border-radius: 30px;
    cursor: url('Assets/Images/green-big-cursor.png'), auto;
    background-color: transparent;
    color: #003329;
}

#horizontol-scroll-div {

    background-color: #003329;
    width: 3vw;
    z-index: 9999;
    height: 100vh;
    position: fixed;
    right: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;

}

.position-scroll-div {
    width: 15px;
    height: 15px;
    border: 1px solid white;
    border-radius: 50%;
    transition: 0.5s;


}


.active-list-item {
    background-color: #003329;
    color: white;
}

